fixed z-index of sidebar bg

--- a/TarkCss/Responsive/style.css
+++ b/TarkCss/Responsive/style.css
@@ -311,7 +311,7 @@ main>*:first-child {
     height: 100%;
     width: 250px;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top:0;
     left: 0;
     background-color: #222;
@@ -333,7 +333,7 @@ main>*:first-child {
     position:fixed;
     top:0px;
     left:0px;
-    z-index: 0;
+    z-index: 1;
 } 
 
 @media only screen and (max-width:650px) {
